tests/fixtures/diagnostics/host_patch_conflict.expected
error[vm::host_error]: host error: PatchConflict { path: HostPath { root: HostRef { type_id: HostTypeId(1), object_id: HostObjectId(42), generation: 1 }, segments: [Field(FieldId(1))] }, expected: Int(9), actual: Some(Int(12)) }
  --> host_patch_conflict.vela:2:5
   |
  2 |     player.level += 1;
   |     ^^^^^^^^^^^^ host error: PatchConflict { path: HostPath { root: HostRef { type_id: HostTypeId(1), object_id: HostObjectId(42), generation: 1 }, segments: [Field(FieldId(1))] }, expected: Int(9), actual: Some(Int(12)) }
  --> host_patch_conflict.vela:2:5
   |
  2 |     player.level += 1;
   |     ^^^^^^^^^^^^ runtime error
